--- a/.github/workflows/github-action-artifact-01.yml
+++ b/.github/workflows/github-action-artifact-01.yml
@@ -48,7 +48,7 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         source: ./target/app.jar
-        target: /home/ubuntu/app
+        target: /home/ubuntu/app/
         
     - name: Connecting EC2 through SSH
       uses: appleboy/ssh-action@v1.0.3
