--- a/.github/workflows/app-with-actions.yml
+++ b/.github/workflows/app-with-actions.yml
@@ -1,10 +1,10 @@
 name: App With Github Actions CI/CD
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch
+  # push:
+  #   branches: [ "main" ]
+
 
 jobs:
   ci:
