--- a/.github/workflows/app-with-docker-actions.yml
+++ b/.github/workflows/app-with-docker-actions.yml
@@ -24,6 +24,7 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
+          sudo fuser -k -n tcp 8080 || true
           docker stop app || true
           docker rm app || true
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions:latest
